<resources>
    <string name="app_name">helloworld</string>
    <string name="button1">ConstraintActivity</string>
    <string name="button2">login</string>
    <string name="button3">ActvitiyTestA</string>
    <string name="title">Android practice</string>
    <string name="button4">button4</string>
    <string name="button10">button10</string>
    <string name="button9">button9</string>
    <string name="button8">button8</string>
    <string name="button7">button7</string>
    <string name="button6">button6</string>
    <string name="button5">button5</string>
    <string name="Hello">Hello!</string>
    <string name="signUp">SignUp</string>
    <string name="Login">Login</string>
    <string name="userName">Username</string>
    <string name="password">Password</string>
    <string name="RememberMe">Remmeber me</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="orConnectWith">Or Connect With</string>
    <string name="signUpWithEmail">Sign Up With E-mail</string>
</resources>