<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/title"
        android:layout_width="148.9dp"
        android:layout_height="30.3dp"
        android:layout_marginLeft="113.1dp"
        android:layout_marginTop="88dp"
        android:layout_marginRight="113.1dp"
        android:layout_marginBottom="548.7dp"
        android:src="@drawable/fill_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginLeft="62.5dp"
        android:layout_marginTop="88dp"
        android:layout_marginRight="62.5dp"
        android:text="@string/userName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginLeft="62.5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="62.5dp"
        android:text="@string/password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userName" />

    <CheckBox
        android:id="@+id/rememberMe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="62.5dp"
        android:layout_marginTop="22.5dp"
        android:text="@string/RememberMe"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/forgotPassword"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="37.5dp"
        android:layout_marginEnd="62.5dp"
        android:text="@string/forgotPassword"
        app:layout_constraintBaseline_toBaselineOf="@id/rememberMe"
        app:layout_constraintLeft_toRightOf="@id/rememberMe"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/Login"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginLeft="62.5dp"
        android:layout_marginTop="22.5dp"
        android:layout_marginRight="62.5dp"
        android:text="@string/Login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgotPassword" />

    <TextView
        android:id="@+id/connectWith"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="62.5dp"
        android:layout_marginTop="26.5dp"
        android:layout_marginEnd="62.5dp"
        android:gravity="center"
        android:text="@string/orConnectWith"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Login" />

    <ImageButton
        android:id="@+id/faceBook"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="62.5dp"
        android:layout_marginTop="29.5dp"
        android:src="@drawable/fb"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tw"
        app:layout_constraintTop_toBottomOf="@id/connectWith" />

    <ImageButton
        android:id="@+id/tw"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="29.5dp"
        android:layout_marginEnd="62.5dp"
        android:src="@drawable/tw"
        app:layout_constraintLeft_toRightOf="@id/faceBook"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/connectWith" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginLeft="62.5dp"
        android:layout_marginTop="85.5dp"
        android:layout_marginRight="62.5dp"
        android:layout_marginBottom="44.5dp"
        android:text="@string/signUpWithEmail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/faceBook" />


</androidx.constraintlayout.widget.ConstraintLayout>